[package]
name = "brainfuck-llvm"
version = "0.1.0"
authors = ["Bruno Muciño <mucinoab@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "llvm10-0" }
